# automatic-wo-future

./: .gitignore  CLAUDE.md  DOCUMENTATION.md  FINDINGS.md  METRICS_LOG.md  PLAN.md  README.md
disease-model/: Dockerfile  MODEL_COMPARISON_REPORT.md  NBEATS_INVESTIGATION_REPORT.md  README.md  compose.yml  main.py  main_lstm.py  main_nbeats.py  main_nbeats_global.py  main_nbeats_improved.py  main_nbeats_lagged.py  main_nbeats_large.py  main_nbeats_long.py  main_nbeats_v2.py  main_tcn.py  main_transformer.py  postman_collection.json  pyproject.toml
disease-model/docs/: EXPERIMENTAL_MODELS.md
disease-model/results/: laos_backtest.html  laos_metrics.csv  metrics.csv  nbeats_baseline_12splits_metrics.csv  nbeats_global_12splits_metrics.csv  nbeats_large_12splits_metrics.csv  nbeats_long_12splits_metrics.csv  negbin_metrics.csv  thailand_backtest.html  thailand_lstm_metrics.csv  thailand_lstm_v2_metrics.csv  thailand_lstm_v3_metrics.csv  thailand_lstm_v4_metrics.csv  thailand_metrics.csv  thailand_nbeats_v1_metrics.csv  thailand_tcn_v1_metrics.csv  thailand_transformer_v1_metrics.csv  vietnam_backtest.html  vietnam_metrics.csv
disease-model/tests/: __init__.py  conftest.py  test_model.py
scripts/: run_eval.sh  start_server.sh
